--- a/app/package.json
+++ b/app/package.json
@@ -33,5 +33,9 @@
     "unocss": "^0.60.3",
     "vite": "^5.0.3"
   },
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "@types/canvas-confetti": "^1.6.4",
+    "canvas-confetti": "^1.9.3"
+  }
 }
